# vgi-nlp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  nlp_worker.py  pyproject.toml  serve.py
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  run-integration.sh
test/sql/: cleaning.test  errors.test  scalars.test  tables.test
tests/: harness.py  test_client_integration.py  test_scalars.py  test_tables.py
vgi_nlp/: __init__.py  meta.py  pipelines.py  scalars.py  schema_utils.py  tables.py  worker.py
