[project]
name = "vgi-nlp"
version = "0.1.0"
description = "Classical NLP (spaCy + fastText + VADER) as a VGI worker for DuckDB/SQL"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Query Farm", email = "hello@query.farm" }]
keywords = ["vgi", "duckdb", "nlp", "spacy", "fasttext", "sentiment", "ner"]
dependencies = [
    "vgi-python",
    "spacy>=3.7",
    "fasttext-wheel",
    "vaderSentiment",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
    "en-core-web-sm",
]

[project.urls]
Homepage = "https://query.farm"

[tool.uv.sources]
vgi-python = { path = "../vgi-python" }
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_nlp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The PEP 723 inline-script header pins a model wheel by long URL; it cannot wrap.
"nlp_worker.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
