[project]
name = "vgi-nlp"
version = "0.1.0"
description = "Classical NLP (spaCy + fastText + VADER) as a VGI worker for DuckDB/SQL"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Query Farm", email = "hello@query.farm" }]
keywords = ["vgi", "duckdb", "nlp", "spacy", "fasttext", "sentiment", "ner"]
dependencies = [
    "vgi-python>=0.8.3",
    "spacy>=3.7",
    "fasttext-wheel",
    "vaderSentiment",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
    "pydoclint",
    "en-core-web-sm",
]

[project.urls]
Homepage = "https://query.farm"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_nlp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# The PEP 723 inline-script header pins a model wheel by long URL; it cannot wrap.
"nlp_worker.py" = ["E501"]
# Docstrings (D) are enforced on the worker package/script (product code), not tests.
"tests/**" = ["D"]
"conftest.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Genuinely untyped third-party libraries (no stubs published).
module = ["spacy.*", "fasttext.*", "vaderSentiment.*"]
ignore_missing_imports = true
